fix: white space issue fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,12 +22,15 @@ a {
 
 .height-100 {
   height: 100%;
+  overflow: hidden;
+
 }
 
 .iframe-cont {
   width: 100%;
   height: 100%;
-  /* overflow: hidden; */
+  display:block;
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
